# CIVIC-AID-STARTUP-

./: .env.example  .gitignore  GEMINI_API_SETUP.md  LEADGEN_ENV_SETUP.md  LEADGEN_INTEGRATION.md  MERMAID_INTEGRATION.md  Procfile  README.md  package-lock.json  pyproject.toml  railway.toml  requirements.txt  vercel.json
.agent/workflows/: civicaid-workflow.md
.github/: PULL_REQUEST_TEMPLATE.md
api/: index.py
contracts/: openapi.yaml
mock_data/: dispatch_sample_call.json  leadgen_sample_case.json  whatsapp_sample_request.json
modules/: __init__.py
modules/dispatch/: README.md  __init__.py  dispatcher_stub.py  mock_calls.json  routes.py
modules/dispatch/dispatch-service/: README.md  next.config.mjs  package-lock.json  package.json
modules/education/: README.md  __init__.py  ppt_generator_stub.py  routes.py  test_image_proxy.py
modules/leadgen/: LeadPrediction.css  LeadPrediction.jsx  README.md  __init__.py  leadgen_stub.py  routes.py  sample_cases.json
modules/whatsapp/: README.md  __init__.py  adapters.py  ai_generator.py  app.py  bot_builder_schema.py  bot_config_api.py  business_configs.json  config_templates.json  demo.sh  n8n_exporter.py  twilio_handler.py
scripts/: check_contracts.sh  db_schema.sql  run_all_demos.sh
tests/: test_n8n_flow.py
web/: DESIGN_SYSTEM_GUIDE.md  bot_builder.html  bot_builder_old.html  bot_success.html  demo_whatsapp.html  demo_whatsapp_old2.html  dispatch.html  dispatch_old.html  education.html  education_old.html  landing.html  leadgen.css  leadgen.html  leadgen_old.html  shared-styles.css  shared-styles_old2.css
(+31 files in other folders)
